--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "tom-select": "^2.3.1"
+        "flatpickr": "^4.6.13",
+        "slim-select": "^2.9.2"
     }
 }
