--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "@alpinejs/focus": "^3.14.3",
+        "@alpinejs/intersect": "^3.14.3",
         "axios": "^1.7.7",
         "bootstrap": "^5.3.3",
         "flatpickr": "^4.6.13",
