--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "masmerise/livewire-toaster": "^2.3",
+        "postare/blade-mdi": "^1.1",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
